...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/memo_title_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/memo_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/memo_text" />

    </com.google.android.material.textfield.TextInputLayout>

...
        android:text="@string/map_instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/memo_description_container" />

    <FrameLayout
        android:id="@+id/map_host"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/map_content_description"
        android:minHeight="240dp"
        app:layout_constraintBottom_toTopOf="@id/selected_location"
...
